--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,7 +22,5 @@ jobs:
         uses: amondnet/vercel-action@v20
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
-
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          scope: YOUR_VERCEL_TEAM_NAME # Optional
-          production: true # Deploy to production
+          vercel-args: '--prod'
